# Image-Processing

./: .gitignore  LICENSE  README.md  install.sh
corner_detection/: CMakeLists.txt
corner_detection/include/: harris_corner_detection.h
corner_detection/src/: harris_corner_detection.cpp
edge_detection/: CMakeLists.txt
edge_detection/include/: edge_detection.h
edge_detection/src/: edge_detection.cpp
experiments/week1/: CMakeLists.txt  readme.txt
experiments/week1/src/: quantize.cpp  sampling.cpp
experiments/week10/: CMakeLists.txt  readme.txt
experiments/week10/images/foreman/: fm0001.tif  fm0002.tif  fm0003.tif  fm0004.tif  fm0005.tif  fm0006.tif  fm0007.tif  fm0008.tif  fm0009.tif  fm0010.tif
experiments/week10/src/: motion_estimation.cpp
experiments/week2/: CMakeLists.txt  readme.txt
experiments/week2/src/: histogram_equalization.cpp  point_operations.cpp
experiments/week3/: CMakeLists.txt  readme.txt
experiments/week3/src/: filter.cpp  sharpening.cpp
experiments/week4/: CMakeLists.txt  readme.txt
experiments/week4/src/: bilateral_filter.cpp  morphological_filter.cpp
experiments/week5/: CMakeLists.txt  readme.txt
experiments/week5/images/: 631Lab1-noisyLena.tif
experiments/week5/src/: edge_detection.cpp  filter.cpp
experiments/week6/: CMakeLists.txt  readme.txt
experiments/week6/src/: deconvolution.cpp
experiments/week7/: CMakeLists.txt  readme.txt
experiments/week7/results/huffman_encoding/: huffman_encoding
experiments/week7/results/run_length_encoding/: run_length_encoding
experiments/week7/src/: huffman_encoding.cpp  run_length_encoding.cpp
experiments/week8/: CMakeLists.txt  readme.txt
experiments/week8/images/: flower.tif  flower1.tif  moon.tif
experiments/week8/src/: dct.m
experiments/week9/: CMakeLists.txt  readme.txt
experiments/week9/src/: adaptive_threshold.cpp  harris_corner_detection.cpp
image_enhancement/: CMakeLists.txt
image_filters/: CMakeLists.txt
image_filters/src/: image_filters.cpp
image_transformation/: CMakeLists.txt
image_transformation/src/: image_transformation.cpp
mobile_scanner/: CMakeLists.txt  readme.txt
mobile_scanner/docs/: AudioScript.docx
mobile_scanner/docs/latex/: MastersDoctoralThesis.cls  example.bib  main.aux  main.bbl  main.bcf  main.blg  main.lof  main.run.xml  main.tex  main.toc
mobile_scanner/docs/latex/Appendices/: AppendixA.aux  AppendixA.tex  AppendixB.aux  AppendixB.tex
mobile_scanner/docs/latex/Chapters/: Chapter1.aux  Chapter1.tex  Chapter2.aux  Chapter2.tex  Chapter3.aux  Chapter3.tex  Chapter4.aux  Chapter4.tex
mobile_scanner/include/: canny_edge_detection.h  harris_corner_detection.h  image_enhancement.h  image_filters.h  image_transformation.h  morphological_filter.h
mobile_scanner/src/: canny_edge_detection.cpp  edge_detection.cpp  harris_corner_detection.cpp  image_enhancement.cpp  image_filters.cpp  image_transformation.cpp  mobile_scanner.cpp  morphological_filter.cpp
motion_estimation/: CMakeLists.txt
motion_estimation/include/: motion_estimation.h
motion_estimation/src/: motion_estimation.cpp
