cmake_minimum_required(VERSION 2.8)
project( week2 )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( histogram_equalization ../src/histogram_equalization.cpp )
target_link_libraries( histogram_equalization ${OpenCV_LIBS} )
add_executable( point_operations ../src/point_operations.cpp )
target_link_libraries( point_operations ${OpenCV_LIBS} )
